[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene & Script/Gameplay/Gameplay.gd" type="Script" id=2]
[ext_resource path="res://Scene & Script/Pause menu/Pause_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asset/Sound and Music/Music/Battle.wav" type="AudioStream" id=4]
[ext_resource path="res://Scene & Script/Lifebar/Lifebar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Asset/Font/jumper_number/jumperscond.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scene & Script/BattleSceneAnnouncement/BattleSceneAnnouncement.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 6 )

[node name="Gameplay" type="Node2D"]
script = ExtResource( 2 )
time = 90

[node name="Lifebars_and_Timer" type="CanvasLayer" parent="."]

[node name="Lifebar" parent="Lifebars_and_Timer" instance=ExtResource( 5 )]

[node name="T1" type="MarginContainer" parent="Lifebars_and_Timer"]
margin_right = 640.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T11" type="CenterContainer" parent="Lifebars_and_Timer/T1"]
margin_right = 640.0
margin_bottom = 40.0

[node name="TimerText" type="Label" parent="Lifebars_and_Timer/T1/T11"]
margin_left = 254.0
margin_top = 1.0
margin_right = 385.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "00 : 00"

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="Pause_menu" parent="PauseMenu" instance=ExtResource( 3 )]
pause_mode = 2

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.474

[node name="BattleSceneCanvas" type="CanvasLayer" parent="."]

[node name="BattleSceneAnnouncement" parent="BattleSceneCanvas" instance=ExtResource( 7 )]
